--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
     "name": "laravel-like-validation",
-    "version": "0.0.2",
-    "main": "src/main.ts",
+    "version": "0.0.4",
+    "main": "./src/main.ts",
     "type": "module",
     "scripts": {
         "test": "vitest",
         "compile": "npx tsc --watch",
         "dev": "node --watch dist/main.js"
     },
+    "exports": {
+        ".": {
+            "import": "./dist/llv.js",
+            "require": "./dist/llv.cjs"
+        }
+    },
     "author": "",
     "license": "ISC",
     "description": "",
     "devDependencies": {
+        "@rollup/plugin-node-resolve": "^16.0.0",
+        "@rollup/plugin-typescript": "^12.1.2",
+        "@types/node": "^22.10.5",
         "typescript": "^5.7.2",
         "vitest": "^2.1.8"
     },
     "dependencies": {
-        "regex-parser": "^2.3.0"
+        "regex-parser": "^2.3.0",
+        "tslib": "^2.8.1"
     }
 }
