--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ricciodev/laravel-like-validation",
-    "version": "0.1.0-alpha",
+    "version": "0.2.0-alpha.0",
     "main": "./dist/index.cjs",
     "module": "./dist/index.js",
     "type": "module",
