--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "module",
     "scripts": {
         "test": "vitest",
+        "coverage": "vitest run --coverage",
         "compile": "npx tsc --watch",
         "dev": "node --watch dist/main.js",
         "build": "rollup -c",
@@ -32,6 +33,7 @@
         "@rollup/plugin-node-resolve": "^16.0.0",
         "@rollup/plugin-typescript": "^12.1.2",
         "@types/node": "^22.10.5",
+        "@vitest/coverage-v8": "^2.1.8",
         "tslib": "^2.8.1",
         "typescript": "^5.7.2",
         "vitest": "^2.1.8"
