removed comments, @types/express and global types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
         "target": "ES6",
         "verbatimModuleSyntax": true,
         "typeRoots": [
-            "./types"
+            "./types",
         ]
     },
     "include": [
