--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
         "removeComments": true,
         "sourceMap": true,
         "strict": true,
-        "target": "ES6",
+        "target": "ES2020",
         "verbatimModuleSyntax": true,
         "typeRoots": [
             "./types",
@@ -25,5 +25,6 @@
             "_build",
             "temp/*"
         ]
-    }
+    },
+    "lib": ["ES2020", "DOM"]
 }
